--- a/ee/index.html
+++ b/ee/index.html
@@ -61,7 +61,7 @@
       }
 
     </script>
-    <script src="dist/js/jquery-3.2.1.min.js"></script>
-    <script src="dist/build.js"></script>
+    <script src="./dist/js/jquery-3.2.1.min.js"></script>
+    <script src="./dist/build.js"></script>
   </body>
 </html>
