--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     		padding: 0px;
     		margin: 0px;
     		box-sizing: border-box;
-    		font-family: PingFangSC-Regular;
+    		font-family: "Times New Roman", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
     	}
     	input:focus,
 			select:focus,
