--- a/ee/index.html
+++ b/ee/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>温博集团</title>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <style>
     	* {
     		padding: 0px;
     		margin: 0px;
     		box-sizing: border-box;
-    		font-family: PingFangSC-Regular;
+    		font-family: "Times New Roman", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", sans-serif;
     	}
     	input:focus,
 			select:focus,
